# accounting-system

./: .dockerignore  .env.example  .env.local.bak.local-postgres  .gitignore  CLAUDE.md  CONSOLIDATION_STATUS.json  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Makefile  PHASE2_CONSOLIDATION_SUMMARY.txt  QA_PHASE_8_COMPLETE.md  QA_SUMMARY.json  QUICK_START.md  README.md  REVIEW_BRIEFING.md  TASKS.md  VERCEL_DEPLOYMENT.md  build.sh  check-deployment.sh  deploy-fly.sh  deploy-local.sh  docker-compose.yml  drizzle.config.ts  fly.toml  next.config.ts  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.json  requirements.txt  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  setup.sh  tsconfig.json  vercel.json
.archive-django/: DEPLOYMENT_SCHEDULE.md  DEPLOYMENT_VERIFICATION.md  DEPLOY_TO_PRODUCTION.md  Dockerfile  Dockerfile.postgres  QA_DELIVERABLES.json  RAILWAY_SETUP.md  README.md  STRATEGIC_PLAN.md  pyproject.toml  render.yaml  requirements.txt
config/: settings.py  urls.py
docs/: consolidation-implementation-summary.md  consolidation-rules.md  data-residency.md  eu-migration-steps.md  fx-rules.md  testing-strategy.md
scripts/: apply-missing-cols.ts  attribute-jes-to-entities.ts  backfill-firm-entity-id.ts  export-db.sh  fix-custom-field-values.ts  import-db.sh  inspect-cols.ts  migrate-customer-assignments.ts  restructure-firm-vs-client.ts  restructure-regions.ts  seed-billing-schedule.ts  seed-budgets.ts  seed-currencies.ts  seed-firm-entities.ts  seed-pending-invoices.ts  seed-pricelist-and-assignments.ts  seed.ts  (+4 more)
(+344 files in other folders)
