[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accounting-system"
version = "0.1.0"
description = "Multi-entity corporate accounting system"
authors = [{name = "Adam Webb", email = "adam@adamcwebb.com"}]
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line length handled by formatter
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    ".git",
]

[tool.ruff.isort]
known-first-party = ["apps", "config"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "allauth.*",
    "django_q.*",
    "openpyxl.*",
    "weasyprint.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--strict-markers --tb=short"
